examples/effects/m7b_1_alias_cycle.err.expected
error: cyclic effect alias: A
  --> examples/effects/m7b_1_alias_cycle.kai:6:1
    |
  6 | type A = B
    | ^
  = note: an alias can only expand to declared effects, not back to itself
  = help: break the cycle: list each effect explicitly in the body of `type A = ...`
