examples/effects/m7b_1_alias_cycle.kai
# m7b #1 negative — cyclic alias chain. The parser accepts both
# decls; alias resolution detects the cycle on DFS revisit and emits
# `cyclic effect alias: <name>`. Compilation fails before any RowExpr
# rewrite consumes the chain.

type A = B
type B = A

fn main() : Int { 0 }
